# ros2_unbag

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  LICENSE-3rdparty  README.md  package.xml  pyproject.toml  setup.py
.github/workflows/: docker-ros.yml
docker/: Dockerfile.dev  additional-debs.txt  additional-pip-requirements.txt  docker-compose.dev.yml  docker-compose.yml
docs/: ADVANCED_USAGE.md  EXPORT_ROUTINES.md  PROCESSORS.md
python_dist_info/: METADATA  WHEEL
qt_resources/: gui.qss  resources.qrc
ros2_unbag/: backend.py  bridge.py  export.py
ros2_unbag/core/: bag_reader.py  bag_writer.py  exporter.py
ros2_unbag/core/processors/: __init__.py  base.py  image.py  pointcloud.py
ros2_unbag/core/routines/: __init__.py  base.py  default.py  image.py  pointcloud.py  video.py
ros2_unbag/core/utils/: bag_utils.py  file_utils.py  image_utils.py  pointcloud_utils.py  video_utils.py
ros2_unbag/ui/: main_window.py  styles.py  widgets.py
ros2_unbag/ui/widgets/: __init__.py  export_options.py  global_settings.py  processor_chain.py  topic_list.py  topic_settings.py
scripts/: ros2-unbag
src/: bridge_client.cpp  bridge_client.hpp  main.cpp  main_window.cpp  main_window.hpp  processor_chain_widget.cpp  processor_chain_widget.hpp
templates/: config.json  routine_name.py
tests/: test_bag_utils.py  test_bridge.py  test_exporter_processors.py  test_file_utils.py  test_image_utils.py  test_master_timestamp.py  test_pointcloud_exports.py  test_processors_base.py  test_processors_docs.py  test_routines_base.py  test_routines_persistent_storage.py  test_video_utils.py
