<?xml version="1.0"?>
<package format="3">
  <name>ros2_unbag</name>
  <version>1.2.3</version>
  <description>A ROS 2 tool for exporting bags to human readable files. Supports pluggable export routines to handle any message type.</description>

  <maintainer email="lukas.ostendorf@ika.rwth-aachen.de">Lukas Ostendorf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>python3-dev</build_depend>
  <build_depend>python3-setuptools</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-svg-dev</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>libqt5-svg</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
